kubernetes/apps/elastic-system/elasticsearch/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elasticsearch
  namespace: elastic-system
  annotations:
    external-dns.alpha.kubernetes.io/target: "ingress.${SECRET_DOMAIN}"
spec:
  ingressClassName: nginx
  rules:
    - host: &host "elasticsearch.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: elasticsearch-es-http
                port:
                  number: 9200
  tls:
    - hosts:
        - *host
